--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "deepmerge": "^4.3.1",
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
+    "v-mask": "^2.3.0",
     "vue": "^3.5.13",
     "vuetify": "^3.7.9",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "jsdom": "^26.0.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
-    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5",
     "vue-tsc": "^2.2.0"
   }
 }
